Archive2/81/3d23a7a05426da/main.cpp
struct s {
    using T = int virtual();
    T f = 0;
};